# template_cpp_ros_pkg

./: CMakeLists.txt  README.md  package.xml
.github/: ros_ci_docker_template.yml  ros_ci_template.yml
.github/workflows/: CI_ROS.yml
include/ros_cpp_template/: template_library.hpp  template_ros_interface.hpp
launch/: ros_cpp_template.launch
src/: template_library.cpp  template_node.cpp  template_ros_interface.cpp
