<?xml version="1.0"?>
<package format="2">
  <name>ros_cpp_template</name>
  <version>0.0.0</version>
  <description>The ros_cpp_template package</description>

  <maintainer email="mail">Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <test_depend>rosunit</test_depend>
  <export>

  </export>
</package>

